<resources>
    <string name="app_name">eduKGInfo</string>
    <string name="home">主页</string>
    <string name="please_login">您好，请登录。</string>
    <string name="login">登录</string>
    <string name="history_record">历史记录</string>
    <string name="qa">问答</string>
    <string name="detail">详情</string>
    <string name="star">收藏</string>
    <string name="default_folder">默认收藏夹</string>
    <string name="add_to_folder">添加到收藏夹</string>
    <string name="create_folder">新建收藏夹</string>
    <string name="enter_folder_name">请输入收藏夹的名称</string>
    <string name="star_fail">收藏失败，请稍后重试。</string>
    <string name="cancel_star_fail">取消收藏失败，请稍后重试。</string>
    <string name="search">检索</string>
    <string name="search_fail">检索失败，请稍后重试。</string>
    <string name="delete">删除</string>
    <string name="dash_template">%s - %s</string>
    <string name="search_image">检索图片</string>
    <string name="no_search_result">空空如也，换个关键词试试吧！</string>
    <string name="sort_by">排序方式</string>
    <string name="sort_default">默认排序</string>
    <string name="length_ascending">长度升序</string>
    <string name="length_descending">长度降序</string>
    <string name="alphabetical_ascending">A-Z</string>
    <string name="alphabetical_descending">Z-A</string>
    <string name="filter_by">按照类别筛选：</string>
    <string name="linking">实体链接</string>
    <string name="qa_hint">请输入您的问题。</string>
    <string name="qa_submit">提问</string>
    <string name="qa_empty">此问题没有找到答案！</string>
    <string name="qa_welcome">Hi！我是小E，你的智能学习助手，有什么问题尽管问我哦～</string>
    <string name="qa_uncertain_without_predicate">我不太确定您问的是什么。您想了解的是 %s 吗？</string>
    <string name="qa_uncertain_with_predicate">我不太确定您问的是什么。您想问的是 %s 的 %s 吗？</string>
    <string name="qa_fast_link_hint">点击了解更多 %s 的相关知识。</string>
    <string name="qa_system_error">啊欧，出现了系统故障，小E去联系一下工程师哈～\n%s</string>
    <string name="linking_hint">请输入您要链接的文本。</string>
    <string name="linking_submit">链接</string>
    <string name="voice_input">语音输入</string>
    <string name="voice_input_request_title">录音权限申请</string>
    <string name="voice_input_request_message">为了实现语音输入，我们需要获取录音权限。</string>
    <string name="voice_input_request_denied">获取录音权限失败，语音输入功能暂不可用。</string>
    <string name="voice_input_module_broken">录音模块启动失败。</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="prev_password">旧密码</string>
    <string name="next_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="sign_in">登录</string>
    <string name="cancel">取消</string>
    <string name="login_failure">用户名或密码错误，请重试。</string>
    <string name="logout">登出</string>
    <string name="logging_in">登录中，请稍候……</string>
    <string name="login_succeed">登录成功。</string>
    <string name="login_as_visitor">游客登录</string>
    <string name="login_register">新用户注册</string>
    <string name="register_processing">注册中，请稍候……</string>
    <string name="please_wait">请稍候……</string>
    <string name="register_succeed">注册成功，已自动为您登录。</string>
    <string name="register_collide">用户名已存在，请重新注册。</string>
    <string name="register_failure">注册失败，请重试。</string>
    <string name="back">返回</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_succeed">修改成功。</string>
    <string name="modify_failure">修改密码失败。</string>
    <string name="modify_prev_wrong">修改密码失败：原密码不正确。</string>
    <string name="modify_not_change">修改密码失败：新密码与原密码一致。</string>
    <string name="login_edukg_failed">登录 eduKG 开放平台失败。</string>
    <string name="querying">查询中，请稍候……</string>
    <string name="query_done">查询成功。</string>
    <string name="query_error">查询失败。</string>
    <string name="confirm">确认</string>
    <string name="all">全部</string>
    <string name="chinese">语文</string>
    <string name="english">英语</string>
    <string name="math">数学</string>
    <string name="physics">物理</string>
    <string name="chemistry">化学</string>
    <string name="biology">生物</string>
    <string name="history">历史</string>
    <string name="geo">地理</string>
    <string name="politics">政治</string>
    <string name="avatar">头像</string>
    <string name="user_test">专项测试</string>
    <string name="user_test_hint">请输入你感兴趣的知识点。</string>
    <string name="entity_not_found">没有找到该实体。</string>
    <string name="no_problems_found">没有找到相关习题。</string>
    <string name="start_test">开始测试</string>
    <string name="user_test_question">%d. %s</string>
    <string name="user_test_option">%s. %s</string>
    <string name="user_test_congratulations">恭喜，达到了%s的正确率！</string>
    <string name="user_test_share_template">#eduKGInfo#\n我在 eduKGInfo 里刷到了这道题，大家一起来看看吧！\n\n题目：%s\n\n选项：\n%s</string>
    <string name="user_test_share_all_template">#eduKGInfo#\n我在 eduKGInfo 里刷了 %d 道关于 %s 的题，正确率达到了%s！你也来挑战吧！</string>
    <string name="detail_share_template">#eduKGInfo#\n我今天在 eduKGInfo 里学习了 %s，它是%s学科的知识点，快来和我一起学吧！</string>
    <string name="share">分享</string>
    <string name="next_problem">下一题</string>
    <string name="see_result">查看结果</string>
    <string name="add_folder_error">新建收藏夹失败。</string>
    <string name="network_error">网络异常，请稍后重试。</string>
    <string name="customize_subject">自定义要展示的科目</string>
    <string name="confirm_settings">确认设置</string>
    <string name="entity_num_per_request">单次加载实体数</string>
    <string name="nothing_checked_alert">您至少需要选择一个学科。</string>
    <string name="entity_num_nan_alert">您输入的实体个数不是数字。</string>
    <string name="entity_num_out_of_range_alert">实体个数应当不小于 5 个不多于 100 个。</string>
    <string name="do_not_support_linking">该实体暂不支持跳转。</string>
    <string name="problem_recommend">试题推荐</string>
    <string name="no_more_problem">没有更多习题了。</string>
    <string name="loading">玩命加载中……</string>
    <string name="avatar_upload_succeed">头像上传成功。</string>
    <string name="avatar_upload_fail">头像上传失败，请稍后重试。</string>
</resources>