<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_qa"
                android:title="@string/qa"/>
        <item
                android:id="@+id/nav_linking"
                android:title="@string/linking"/>
        <item
                android:id="@+id/nav_user_test_welcome"
                android:title="@string/user_test"/>
    </group>

    <group
            android:id="@+id/menu_user_nav_group"
            android:visible="false">
        <item
                android:id="@+id/nav_star"
                android:title="@string/star"/>
        <item
                android:id="@+id/nav_user_test_recommended"
                android:title="@string/problem_recommend"/>
        <item
                android:id="@+id/nav_modify"
                android:title="@string/modify_password"/>
        <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"/>
    </group>
</menu>