<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.java.sunxun.HomeFragment"
            android:label="@string/home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_history"
            android:name="com.java.sunxun.HistoryFragment"
            android:label="@string/history"
            tools:layout="@layout/fragment_history"/>

    <fragment
            android:id="@+id/nav_qa"
            android:name="com.java.sunxun.QaFragment"
            android:label="@string/qa"
            tools:layout="@layout/fragment_qa"/>

    <fragment
            android:id="@+id/nav_detail"
            android:name="com.java.sunxun.DetailFragment"
            android:label="@string/detail"
            tools:layout="@layout/fragment_detail"/>

    <fragment
            android:id="@+id/nav_search"
            android:name="com.java.sunxun.SearchFragment"
            android:label="@string/search"
            tools:layout="@layout/fragment_search"/>

    <fragment
            android:id="@+id/nav_linking"
            android:name="com.java.sunxun.LinkingFragment"
            android:label="@string/linking"
            tools:layout="@layout/fragment_linking"/>
</navigation>