<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/home_menu_icon"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:iconPadding="0dp"
            app:iconGravity="textStart"
            android:layout_marginStart="10dp"
            app:icon="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/home_search_input"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/home_menu_icon"
            app:layout_constraintRight_toLeftOf="@id/home_history_icon"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/search"
            android:textColor="@color/grey"
            android:textSize="17sp" />

        <Button
                android:id="@+id/home_history_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:iconPadding="0dp"
                app:iconGravity="textStart"
                android:layout_marginEnd="10dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:icon="@drawable/ic_history"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.java.sunxun.components.ExpandLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expandable_tab_wrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/content_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        android:orientation="vertical">
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subject_tab_wrapper"
            app:flexDirection="row"
            app:alignItems="center"
            app:justifyContent="center">
            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/subject_tab"
                app:tabMode="scrollable">
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chinese" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/math" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/physics" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chemistry" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biology" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/geo" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/politics" />
            </com.google.android.material.tabs.TabLayout>
            <Button
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginEnd="10dp"
                app:icon="@drawable/ic_settings" />
        </com.google.android.flexbox.FlexboxLayout>
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            app:flexDirection="column">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/customize_subject"
                android:textSize="16sp" />

            <GridLayout
                android:id="@+id/checkbox_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="3">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/chinese"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="1sp"
                    android:id="@+id/check_chinese" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/english"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="1sp"
                    android:id="@+id/check_english"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/math"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="1sp"
                    android:id="@+id/check_math"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/physics"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="1sp"
                    android:id="@+id/check_physics"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/chemistry"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="1sp"
                    android:id="@+id/check_chemistry"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/biology"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="1sp"
                    android:id="@+id/check_biology" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/history"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="1sp"
                    android:id="@+id/check_history"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/geo"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="1sp"
                    android:id="@+id/check_geo"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/politics"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="1sp"
                    android:id="@+id/check_politics" />

            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bottom_wrapper"
                android:orientation="horizontal"
                app:layout_maxHeight="60sp"
                android:gravity="center">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/page_size_input_wrapper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/entity_num_per_request"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_weight="1"
                    android:layout_marginEnd="10sp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/page_size_input" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_settings"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/confirm"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
            </LinearLayout>
        </com.google.android.flexbox.FlexboxLayout>
    </com.java.sunxun.components.ExpandLinearLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expandable_tab_wrapper"
        android:background="@color/light_grey"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:id="@+id/content_wrapper">
        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/entity_list_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            android:background="@drawable/shape_corner">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/entity_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </com.google.android.flexbox.FlexboxLayout>
</androidx.constraintlayout.widget.ConstraintLayout>