<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.UserTestWelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/user_test_welcome_header"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="parent">

        <Button
                android:id="@+id/user_test_welcome_return_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:icon="@drawable/ic_navigate_before"
                app:iconPadding="0dp"
                app:iconGravity="textStart"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/user_test"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/user_test_welcome_subject_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/chinese"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:drawableRightCompat="@drawable/ic_expand_more"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:id="@+id/user_test_input_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_test_welcome_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.36"
            android:layout_marginHorizontal="50dp"
            android:orientation="horizontal"
            android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/user_test_hint"
                android:layout_marginHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_test_welcome_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:gravity="center"
                    android:selectAllOnFocus="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/user_test_welcome_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_test"
                android:enabled="false"/>
    </LinearLayout>

    <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/user_test_history_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/user_test_input_area"
            app:layout_constraintLeft_toLeftOf="@+id/user_test_input_area"
            app:layout_constraintRight_toRightOf="@+id/user_test_input_area"
            android:orientation="horizontal"
            app:flexWrap="wrap"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/user_test_voice_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mic"
            android:contentDescription="@string/voice_input"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>